# Veri-Charm-Authentication-Protocol-

./: README.md  Veri-Charm_demo.html  indexVC.html  script.js  styles.css
Veri-Charm/: README.md
Veri-Charm/circuits/: product-verification.circom
Veri-Charm/contracts/: Cargo.toml
Veri-Charm/contracts/src/: charm.rs  lib.rs
Veri-Charm/docs/: DEPLOYMENT.md
Veri-Charm/scripts/: deploy-contract.sh
Veri-Charm/spells/: mint-charm.yaml
Veri-Charm/tests/: test-integration.js
Veri-Charm/webapp/src/components/: ProductCard.jsx
Veri-Charm/webapp/src/services/: scrolls-api.js  wallet.js
