[package]
name = "veri-charm-contract"
version = "1.0.0"
edition = "2021"
authors = ["Bit-Earth Labs"]
description = "Anti-counterfeiting protocol using Charm tokens on BitcoinOS"
license = "MIT"
repository = "https://github.com/WykeTheAlchemist/veri-charm-protocol"
readme = "README.md"

[lib]
crate-type = ["cdylib"]
name = "veri_charm_contract"

[dependencies]
charms-sdk = { version = "0.7.0", features = ["std", "contract", "zk"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"

# ZK dependencies
bellman = "0.12"
pairing = "0.24"
zkp = "0.7"

[dev-dependencies]
charms-test = "0.7.0"
tempfile = "3.3"

[profile.release]
codegen-units = 1
opt-level = 'z'  # Optimize for size
lto = true
strip = true
panic = 'abort'

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = ["."]
